--- a/Dinamic V3/pom.xml
+++ b/Dinamic V3/pom.xml
@@ -13,11 +13,14 @@
 </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
-  <groupId>org.testng</groupId>
-  <artifactId>testng</artifactId>
-  <version>6.10</version>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.7.1</version>
+    <scope>test</scope>
 </dependency>
+
 
 <!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 <dependency>
